...
@Composable
fun Drawer(userViewModel: UserViewModel, navigateTo: (route: String) -> Unit) {
    val drawerState = rememberDrawerState(DrawerValue.Closed)
    val scope = rememberCoroutineScope()
    val items = listOf(
        //Triple(R.drawable.weather, "Check the weather", "weather"),
        Triple(R.drawable.camera, "Search airplanes with AR", CameraDestination.route),
        Triple(R.drawable.airplane, "See all aircraft types", SeeAllAircraftTypesDestination.route),
        Triple(R.drawable.runway, "See all airports", SeeAllAirportsDestination.route),
        Triple(R.drawable.settings, "Settings", SettingsDestination.route)
    )

    ModalNavigationDrawer(
        drawerState = drawerState,
        gesturesEnabled = false,
        drawerContent = { DrawerContent(userViewModel = userViewModel, drawerState = drawerState, scope = scope, items = items, navigateTo = navigateTo) },
...
            .padding(horizontal = 16.dp),
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        IconButton(onClick = { scope.launch { drawerState.close() } }) {
            Icon(
                Icons.AutoMirrored.Rounded.ArrowBack,
                contentDescription = "Back",
                modifier = Modifier
                    .size(30.dp)
            )
        }

        if (userUiState.isLoggedIn) {
...
            ) {
                TextButton(onClick = {
                    scope.launch {
                        drawerState.close()
                        navigateTo(RegisterDestination.route)
                    } }) {
                    Text(text = "Register", fontSize = 22.sp)
                }
                Text(text = "or", color = MaterialTheme.colorScheme.onSurfaceVariant, fontSize = 22.sp)
                TextButton(onClick = {
                    scope.launch {
                        drawerState.close()
                        navigateTo(LoginDestination.route)
                    } }) {
                    Text(text = "Log in", fontSize = 22.sp)
                }
            }
        }
    }
    HorizontalDivider(
        modifier = Modifier.padding(start = 25.dp, end = 25.dp, top = 5.dp),
...
