...
@Composable
fun LoginAndRegisterScreen(isRegister: Boolean, navigateTo: (route: String) -> Unit, userViewModel: UserViewModel, themeViewModel: ThemeViewModel = viewModel(factory = AppViewModelProvider.Factory)) {
    var greeting = "Log in to your SkyEye account"
    var actionWord = "Log in"
    if (isRegister) {
        greeting = "Create one SkyEye account for all your devices"
        actionWord = "Sign up"
    }
    var email by remember { mutableStateOf("") }
    var password by remember { mutableStateOf("") }
    val coroutineScope = rememberCoroutineScope()
    val themeUiState by themeViewModel.themeUiState.collectAsState()
    val isDarkMode = themeUiState.isDarkMode
...
            Row(horizontalArrangement = Arrangement.Start, modifier = Modifier
                .fillMaxWidth()
                .padding(start = 10.dp)) {
                IconButton(onClick = { navigateTo(HomeDestination.route) }) {
                    Icon(
                        Icons.Rounded.Close,
                        contentDescription = "close",
                        tint = MaterialTheme.colorScheme.onSurface,
                        modifier = Modifier.size(30.dp)
                    )
                }
            }
            val logo = if (isDarkMode) R.drawable.logo_skyeye else R.drawable.logo_skyeye_light
...
                if (!isRegister) {
                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.End
                    ) {
                        TextButton(onClick = { navigateTo(ForgotPasswordDestination.route) }) {
                            Text(text = "Forgot password?")
                        }
                    }
                } else {
                    Spacer(modifier = Modifier.height(20.dp))
                }
                Button(
...
                    fontSize = 18.sp,
                    modifier = Modifier
                        .align(Alignment.CenterVertically)
                        .padding(bottom = 1.dp)
                )
                TextButton(onClick = { navigateTo( if(isRegister) LoginDestination.route else RegisterDestination.route) }) {
                    Text(text = if (isRegister) "Sign in" else "Sign up", fontSize = 18.sp, textDecoration = TextDecoration.Underline)
                }
            }
        }
    }
}

...
